--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body, html {
 
 .bgimg {
   background-image: url('/images/development-background.jpg');
-  height: 100%;
+  wdith: 100%;
   background-position: center;
   background-size: cover;
   position: relative;
