--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body, html {
 
 .bgimg {
   background-image: url('/images/development-background.jpg');
+  height: 100%;
   width: 100%;
   background-position: center;
   background-size: cover;
