--- a/test/testEXCEL.html
+++ b/test/testEXCEL.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <table id="excelTable"></table>
-  <script src="script.js"></script>
+  <script src="testScript.js"></script>
 </body>
 </html>
