--- a/test/testEXCEL.html
+++ b/test/testEXCEL.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Excel to HTML Table</title>
+  <title>Test Excel</title>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
 </head>
 <body>
