--- a/mahjong2024/mahjong_selector.html
+++ b/mahjong2024/mahjong_selector.html
@@ -34,7 +34,7 @@
 
         $(document).ready(function() {
             //Disable Double-Tap Zoom on Mobile Browser
-            javascript:document.querySelectorAll("*").forEach(e=>{e.style["touch-action"]="manipulation"}),new MutationObserver(e=>{e.forEach(function(e){for(var o=0;o<e.addedNodes.length;o++)e.addedNodes[o].style["touch-action"]="manipulation"})}).observe(document.body,{childList:!0,subtree:!0});
+            //javascript:document.querySelectorAll("*").forEach(e=>{e.style["touch-action"]="manipulation"}),new MutationObserver(e=>{e.forEach(function(e){for(var o=0;o<e.addedNodes.length;o++)e.addedNodes[o].style["touch-action"]="manipulation"})}).observe(document.body,{childList:!0,subtree:!0});
             
             init_Variable();
 
