--- a/mahjong2024/mahjong_selector.html
+++ b/mahjong2024/mahjong_selector.html
@@ -12,6 +12,19 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         /* Add your CSS styling here */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f7f7f7;
+            display: grid;
+            height: 100%;
+            place-items: center;;
+        }
     </style>
     <script>
         var auto_increment = 0;
