--- a/mahjong2024/mahjong_selector.html
+++ b/mahjong2024/mahjong_selector.html
@@ -205,35 +205,212 @@
 .setting_title {
     font-size: 30px;
   }
-/*
-.setting_panel {
-    display: flex;
+#setting_overlay, #showroom_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .setting_panel table {
-    font-size: 48px;
-    min-width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+}
 
-.setting_panel_grid_container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-content: center;
-  }
-  
-  .setting_panel_grid_item {
+.overlay_content {
+    background-color: #f7f7f7;
+    padding: 20px;
+    text-align: center;
+}
+        
+/* CSS Toggle Buttons */
+/* Hide the default checkbox */
+input[type=checkbox] {
+    display: none;
+}
+
+/* Style the container */
+.switch-container {
+    display: flex;
     align-items: center;
+}
+
+/* Style the text */
+.switch-text {
+    margin-right: 10px;
+    font-size: 36px;
+    color: #555;
+}
+
+/* Style the switch */
+.switch {
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    position: relative;
+    background-color: #ccc;
+    border-radius: 34px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 10px;
+}
+
+/* Style the switch knob */
+.switch::before {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    top: 4px;
+    left: 4px;
+    background-color: white;
+    border-radius: 50%;
+    transition: transform 0.3s;
+}
+
+/* Change the background color of the switch when checked */
+input[type=checkbox]:checked + .switch {
+    background-color: #6f42c1;
+}
+
+/* Move the switch knob to the right when checked */
+input[type=checkbox]:checked + .switch::before {
+    transform: translateX(26px);
+}
+        /* CSS Radio Buttons */
+/* Hide the browser's default checkbox */
+.radio_container input 
+{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.radio_container 
+{
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Create a custom radio button */
+.radio_checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
   }
   
+  /* On mouse-over, add a grey background color */
+  .radio_container:hover input ~ .radio_checkmark {
+    background-color: #ccc;
+  }
   
-  */
+  /* When the radio button is checked, add a blue background */
+  .radio_container input:checked ~ .radio_checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .radio_checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .radio_container input:checked ~ .radio_checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .radio_container .radio_checkmark:after {
+       top: 9px;
+      left: 9px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: white;
+  }
+        /* CSS Checkbox */
+.checkbox_container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .checkbox_container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkbox_checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .checkbox_container:hover input ~ .checkbox_checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .checkbox_container input:checked ~ .checkbox_checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkbox_checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .checkbox_container input:checked ~ .checkbox_checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .checkbox_container .checkbox_checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
     </style>
     <script>
         var auto_increment = 0;
