--- a/mahjong2024/mahjong_selector.html
+++ b/mahjong2024/mahjong_selector.html
@@ -1128,7 +1128,7 @@ input[type=checkbox]:checked + .switch::before {
                 <div class="setting_card">
                     <div class="setting_container">
                         <label class="setting_title">AutoSort</label>
-                        <input type="checkbox" id="switchAutoSort" checked>
+                        <input type="checkbox" id="switchAutoSort">
                         <label class="switch" for="switchAutoSort"></label>
                     </div>
                 </div>
